mostly changes Done

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>E-website</title>
 
+    <link rel="icon" type="image/x-icon" href="assets/images/icons/favicon.ico">
+
     <!-- Plugins CSS File -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
